@startuml

skinparam componentStyle uml2

package "'EstacaoDeRecarga' Aggregate" <<Rectangle>> {
	class EstacaoDeRecarga <<(E,DarkSeaGreen) Entity>> {
		String nomeDaEstacao
		int quantidadeDeCarregadores
		int precoMinimo
		int precoPKwH
		int distancia
		int tempoPorAgendamento
		IdEstacao idEstacao
		IdFornecedor idFornecedor
		HorarioDisponivel horarioFuncionamento
		Endereco enderecoEstacao
		StatusEstacao statusEstacao
		List<HorarioDisponivel> horariosDisponiveis
		List<IdAgendamento> historicoDeUso
	}
	class HorarioDisponivel <<(V,DarkSeaGreen) Value Object>> {
		DateTime inicioAgendamento
		DateTime fimAgendamento
	}
	class IdEstacao <<(V,DarkSeaGreen) Value Object>> {
		int idEstacao
	}
	class Endereco <<(V,DarkSeaGreen) Value Object>> {
		String cep
		String rua
		String bairro
		String cidade
		int numero
	}
	enum StatusEstacao {
		ATIVA
		INATIVA
	}
	class AlteracoesEstacao <<(S,DarkSeaGreen) Service>> {
		int adicionarEstacao(int quantidadeDeCarregadores, HorarioDisponivel horarioFuncionamento, Endereco enderecoEstacao, String nomeDaEstacao, IdEstacao idEstacao, int precoMinimo, int precoPKwH, int tempoPorAgendamento)
		int alterarQuantidadeCarregadores(int novaQuantidade)
		int alterarHorarioFuncionamento(HorarioDisponivel novoHorario)
		String alterarNomeEstacao(String novoNome)
		int alterarprecoMinimo(int novoPreco)
		int alterarPrecoPKwH(int novoPreco)
		int alterarTempoPorAgendamento(int novoTempo)
		int definirHorariosDisponiveis(int tempoPorAgendamento, HorarioDisponivel horarioFuncionamento)
		int deletarEstacao(EstacaoDeRecarga estacao)
	}
}
EstacaoDeRecarga "1" *--> "*" HorarioDisponivel : horariosDisponiveis
EstacaoDeRecarga --> Endereco : enderecoEstacao
EstacaoDeRecarga --> StatusEstacao : statusEstacao
EstacaoDeRecarga --> IdEstacao : idEstacao
EstacaoDeRecarga --> HorarioDisponivel : horarioFuncionamento


@enduml
